kubernetes/app/media/statefulset-radarr-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr-db
  namespace: media
  labels:
    app: radarr-db
spec:
  replicas: 1
  serviceName: radarr-db
  selector:
    matchLabels:
      app: radarr-db
  template:
    metadata:
      labels:
        app: radarr-db
    spec:
      securityContext:
        runAsUser: 1027
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: postgres
          image: postgres:14.21
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radarr-db
