kubernetes/app/media/statefulset-seerr-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr-db
  namespace: media
  labels:
    app: seerr-db
spec:
  replicas: 1
  serviceName: seerr-db
  selector:
    matchLabels:
      app: seerr-db
  template:
    metadata:
      labels:
        app: seerr-db
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:14.21
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-synology-ssd
        resources:
          requests:
            storage: 5Gi
